assets/styles/components/_blocks.scss
/*------------------------------------*\
    $CONTENTS
\*------------------------------------*/
/**
 * CONTENTS............You’re reading it!
 * RESET...............Set our reset defaults
 * FONT-FACE...........Import brand font files
 */


/*------------------------------------*\
    $RESET
\*------------------------------------*/


.block {

	figcaption, .rsCaption, .caption {
		@extend .bg-gray-bg;
	}
}

.block-item {
	@include component-spacing-bottom;
	background-color: $bg-gray;
	// college specific coloring
	.camberwell & {
		background-color: $ccw-blue-light;
	}
	.chelsea & {
		background-color: $ccw-salmon-light;
	}
	.wimbledon & {
		background-color: $ccw-green-light;
	}
	figure {
		margin-bottom: 0;
	}
	.text {
		padding: 0 rhythm(4, 16px);
	}
}

/*------------------------------------*\
    $Text
\*------------------------------------*/

.__text {

	@include gs-media (t,min-max) {
		@include gs-span(t, all);
	}
	@include gs-media (d) {
		@include gs-span(d, 5,12, (5, 16));
	}

	.l-content & {
		@include gs-media (d) {
			@include gs-span(d, all);
		}
		.lcf & { // for courses landing page
			@include component-spacing-bottom;
		}

	}

	
}

.leader {
	@include font-size(22);
	@include adjust-leading-to(5, 22px); 	
	padding-bottom: rhythm(3, 22px);
}

/*------------------------------------*\
    $Media
\*------------------------------------*/


.__media {
	h2 {
		// width: 100%;
		@include gs-media(t,min-max) {
			.camberwell &, .chelsea &, .wimbledon & {
				width: 47.28217%;
				margin-top: 24px;
			}
		}
		@include gs-media(d) {
			.camberwell &, .chelsea &, .wimbledon & {
				width: 48.31199%;
				margin-top: 48px;
			}
		}
	}

	li {
		// college specific coloring
		.camberwell &, .chelsea &, .wimbledon & {
			padding-bottom: 0;
		}
		.camberwell & {
			background-color: $ccw-blue-light;
		}
		.chelsea & {
			background-color: $ccw-salmon-light;
		}
		.wimbledon & {
			background-color: $ccw-green-light;
		}
	}

	li h3, li p {
		width: 100%;
		.camberwell &, .chelsea &, .wimbledon & {
			padding-left: 18px;
			padding-right: 18px;
		}
	}

	figure a {
		display: block;
		line-height: 0;
	}

	figcaption a {
		display: inline;
	}

	&.__with-aside { 
	/**
	* Images with aside will run from d5 to d12 
	*/
		.l-content{
			@include gs-media (t,min-max) {
				@include gs-span(t, all);
			}
			@include gs-media (d) {
				@include gs-span(d, 5,12, (5, 16));
			}
		}
		// .__text {
		// 	@include gs-media (d) {
		// 		@include gs-span(d, 5,12, (5, 13));
		// 	}
		// }
	}

	&.__highlight {
		background: $bg-gray;
		&:hover {
			filter: grayscale(100%);
			-webkit-filter: grayscale(100%);
			-moz-filter: grayscale(100%);
			-ms-filter: grayscale(100%);
			-o-filter: grayscale(100%);
			-webkit-transition: all ease 0.2s;
			-moz-transition: all ease 0.2s;
			-o-transition: all ease 0.2s;
			transition: all ease 0.2s;
			background: $black;
			h2, h3 {
				color: $white;
			}
		}
	}
}

.__horiz-block {
	overflow: hidden;
	@include component-spacing-bottom;
	@include gs-media(t,min-max) {
	}

	@include gs-media(d) {
		figure {
			@extend %d5-d8--within-d5-d16;
		}
		.text {
			@extend %d9-d16--within-d5-d16;
		}
	}
}

.__quote {
	border-bottom: 4px solid $black;
	@include component-spacing-bottom;
	p {
		@include font-size(36);
		@include adjust-leading-to(7, 36px); 	
		.lcc & {
			@extend %AlternateGothic;
			// @extend %LeagueGothicRegular;
			word-spacing: -4px;
		}
	}
}

/*------------------------------------*\
    $Page Block Classes
\*------------------------------------*/

// two-up-full - used specifically for the UAL homepage
.two-up-full {
	li {
		background-color: $white;
		padding-bottom: 0;
		h3 {
			padding: 18px;
		}
		p {
			padding: 0 18px 24px 18px;
		}
	}
	@include gs-media(d) {
		li {
			@include gs-span(d, 1, 8);
		}
		li:nth-child(2n) {
			@include gs-span(d, 9, 16);
		}
	}
}

// two-up - core styles
// 
.two-up {
	@include gs-media(t,min-max) {
		li {
			@include gs-span(t, 2, 4, (2, 7));
		}
		li:nth-child(2n) {
			@include gs-span(t, 5, 7, (2, 7));
		}
	}

	&.l-content {
		@extend %d5-d12--within-d5-d16;
		@include gs-media(d) {
			li {
				@include gs-span(d, 5, 8, (5, 12));
				padding-left: 0;
			}
			li:nth-child(2n) {
				@include gs-span(d, 9, 12, (5, 12));
			}
		}
	}

	&.l-content-full-width {
		@extend %d5-d16--within-d5-d16;
		@include gs-media(d) {
			li {
				@include gs-span(d, 5, 10, (5, 16));
			}
			li:nth-child(2n) {
				@include gs-span(d, 11, 16, (5, 16));
			}
		}
	}

	&.l-content-half-width {
		@extend %d5-d16--within-d5-d16;
		@include gs-media(d) {
			ul {
				@include gs-span(d, 5, 10, (5, 16));
			}
			ul:nth-child(2n) {
				@include gs-span(d, 11, 16, (5, 16));
			}
		}
	}

}

// three-up - core styles
// 
.three-up {
	@include gs-media(t,min-max) {
		li {
			@include gs-span(t, 2, 7, (2, 7));
			clear: left;
			@include component-spacing-bottom;
		}
	}

	&.l-content-full-width {
		@extend %d5-d16--within-d5-d16;
		@include gs-media(d) {
			li {
				@include gs-span(d, 5, 8, (5, 16));
			}
			li:nth-child(2n) {
				@include gs-span(d, 9, 12, (5, 16));
			}
			li:nth-child(3n) {
				@include gs-span(d, 13, 16, (5, 16));
			}
		}
	}

}

// four-up-full - used specifically for the UAL homepage
// 
.four-up-full {
	li {
		background-color: $white;
		padding-bottom: 0;
		h3 {
			padding: 18px;
		}
		p {
			padding: 0 18px 24px 18px;
		}
		.nopadding {
			h3 {
				padding: 18px 0;
			}
			p {
				padding: 0;
			}
		}
	}
	@include gs-media(d) {
		li {
			@include gs-span(d, 1, 4);
		}
		li:nth-child(2n) {
			@include gs-span(d, 5, 8);
		}
		li:nth-child(3n) {
			@include gs-span(d, 9, 12);
		}
		li:nth-child(4n) {
			@include gs-span(d, 13, 16);
		}
	}
}

// four-up - core styles
// 
.four-up {
	@include gs-media(t,min-max) {
		@extend %t2-t7;
		.content & {
			@extend %t-all;
		}
		
			li {
				@include gs-span(t, 2, 4, (2, 7));
			}
			li:nth-child(2n) {
				@include gs-span(t, 5, 7, (2, 7));
			}
			li:nth-child(3n) {
				@include gs-span(t, 2, 4, (2, 7));
				clear: left;
			}
			li:nth-child(4n) {
				@include gs-span(t, 5, 7, (2, 7));
			}
		}

	&.l-content-full-width {
		@include gs-media(d) {
			@extend %d-all;
			li {
				@include gs-span(d, 1, 4);
			}
			li:nth-child(2n) {
				@include gs-span(d, 5, 8);
			}
			li:nth-child(3n) {
				@include gs-span(d, 9, 12);
			}
			li:nth-child(4n) {
				@include gs-span(d, 13, 16);
			}
		}
	}

}



// COLLEGE SPECIFIC MEDIA BLOCK STYLING
.two-up, .three-up {
	
	// CSM specific styling for media blocks
	.csm & {
		h2 {
			width: 50%;
		}
		li {
			h3 {
				padding: 18px;
			}
			p {
				padding: 0 18px 18px 18px;
			}
			figure {
				img {
					// border-bottom: 2px solid $csm-primary;
					&:hover {
						filter: grayscale(100%);
						-webkit-filter: grayscale(100%);
						-moz-filter: grayscale(100%);
						-ms-filter: grayscale(100%);
						-o-filter: grayscale(100%);					
					}
				}
			}
			&:hover {
				background-color: $csm-primary;
				color: $white;
				h3 a {
					color: $white;
					border-bottom: 1px dotted $white;
					&:hover {
						border-bottom: 1px solid $white;
					}
				}
			}
		}
	}
}

.__gallery {
	.lcc & {
		h3 {
			border-bottom: none;
			line-height: 16px; 
			word-spacing:0;
			a {
				@extend %Swiss721BT-Bold;
				text-transform: none;
				@include font-size(16);
				line-height: 1.5em;
				display: block;
			}
		}
	}
}

.lcf .__media figure, .lcf .__media .video-container {
	@include component-spacing-bottom(4);
}

